--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "scripts": {
     "build": "tsc",
     "dev": "tsc --watch",
+    "lint": "eslint src/ --ext .js,.ts",
+    "lint:fix": "eslint src/ --ext .js,.ts --fix",
     "prepublishOnly": "npm run build",
     "test": "npm run build && echo 'CLI build successful - use npm run test:default or npm run test:spa to test functionality'",
     "test:default": "npm run build && node dist/bin/run.js test-project --template default --skip-install",
@@ -63,10 +65,14 @@
     "prompts": "^2.4.2"
   },
   "devDependencies": {
+    "@eslint/js": "^9.34.0",
     "@oclif/test": "^4.1.13",
     "@types/minimatch": "^5.1.2",
     "@types/node": "^22.13.10",
     "@types/prompts": "^2.4.9",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "eslint": "^9.34.0",
     "tsx": "^4.20.5",
     "typescript": "^5.8.2"
   },
